# py7dtd

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
dataset/train/annotations/: Screenshot_1.txt  Screenshot_10.txt  Screenshot_11.txt  Screenshot_12.txt  Screenshot_13.txt  Screenshot_14.txt  Screenshot_15.txt  Screenshot_16.txt  Screenshot_17.txt  Screenshot_18.txt  Screenshot_19.txt  Screenshot_2.txt  Screenshot_20.txt  Screenshot_21.txt  Screenshot_22.txt  Screenshot_23.txt  Screenshot_24.txt  Screenshot_25.txt  Screenshot_26.txt  Screenshot_27.txt  Screenshot_28.txt  Screenshot_29.txt  Screenshot_3.txt  Screenshot_30.txt  Screenshot_31.txt  Screenshot_32.txt  Screenshot_33.txt  Screenshot_34.txt  Screenshot_35.txt  Screenshot_36.txt  Screenshot_37.txt  Screenshot_38.txt  Screenshot_4.txt  Screenshot_5.txt  Screenshot_6.txt  Screenshot_7.txt  Screenshot_8.txt  Screenshot_9.txt
dataset/validation/annotations/: Screenshot_39.txt  Screenshot_40.txt  Screenshot_41.txt  Screenshot_42.txt  Screenshot_43.txt  classes.txt
src/py7dtd/: constants.py  version.py
src/py7dtd/ai/: detection.py  training.py
src/py7dtd/ai/annotated-images/: Screenshot_1.xml  Screenshot_11.xml  Screenshot_14.xml  Screenshot_16.xml  Screenshot_19.xml  Screenshot_2.xml  Screenshot_21.xml  Screenshot_22.xml  Screenshot_23.xml  Screenshot_25.xml  Screenshot_26.xml  Screenshot_27.xml  Screenshot_29.xml  Screenshot_30.xml  Screenshot_32.xml  Screenshot_33.xml  Screenshot_36.xml  Screenshot_37.xml  Screenshot_38.xml  (+8 more)
src/py7dtd/bots/: auto_shooting.py  crack_passcode.py
src/py7dtd/io/: commands_controller.py  key_watcher.py  stop_watcher.py  window_handler.py
src/py7dtd/scripts/: blocks_detection.py  crack_passcode.py
(+24 files in other folders)
